# sage

./: .gitignore  .gitmodules  README.md  index.html
M2T2/: .gitattributes  .gitignore  demo.py  run.sh
server/: .env  .gitignore  README.md  constants.py  correction.py  key.py  layout.py  layout_func_utils.py  layout_parser.py  layout_wo_robot.py  layout_wo_robot_multiroom.py  layout_wo_robot_scene_aug.py  llm_client.py  main.py  pack_scene_to_zip.py  pyproject.toml  start_flux_server.sh  start_trellis_server.sh  utils.py  vlm.py
server/augment/: check_data_integrity.py  compose_type_augmentation.py  generate_scene_aug_config.py  pose_aug_mm_from_layout_with_task.py  pose_aug_on_type_aug_v0.py  pose_aug_on_type_aug_v1.py  pose_aug_on_type_aug_v2.py  pose_aug_v0.py  pose_aug_v0_reach.py  pose_aug_v1_reach.py  pose_aug_vis.py  pose_aug_vis_v1.py  pose_aug_with_mm_v0.py  pose_aug_with_mm_v1.py  scene_aug_mapping_task.py  scene_level_pose_aug.py  scene_level_pose_aug_compose.py  scene_level_type_aug.py  scene_level_type_aug_compose.py  scene_level_type_aug_settle.py  scene_level_type_aug_visualize_room_bpy_frames_circular_cam_sampling_from_file.py  type_aug_from_layout_with_task.py  type_aug_v0.py  type_aug_v1.py  type_aug_v2.py  type_aug_visualize.py  type_aug_with_pose_aug_from_layout_with_task.py
server/augment/scripts/: general_cat_augmentation.sh  general_pose_augmentation.sh  robot_data_generation_franka_arm.sh  robot_data_generation_mobile_franka.sh  robot_data_generation_mobile_franka_scene_aug.sh
server/eval/: eval.sh  eval_appearance.py  eval_physics.py  eval_physics_no_collision_test.py  find_layout_id.py  render_top_down_annotation.py  visualize_layout_bpy.py  visualize_layout_top_down.py  visualize_physics_v2.py  visualize_physics_v3.py  visualize_physics_v3_longest.py  visualize_room_bpy.py  visualize_room_bpy_frames.py  visualize_room_bpy_frames_circular_cam_sampling.py  visualize_room_bpy_frames_longest.py  visualize_room_bpy_frames_longest_from_file.py  visualize_room_bpy_frames_longest_from_file_one_frame.py  visualize_room_bpy_frames_longest_from_file_v2.py  visualize_room_bpy_frames_v2.py  visualize_room_circular_v2.py
server/floor_plan_materials/: door_material.py
server/isaaclab/: correct_mobile_franka.py  data_generation_franka_pnp_from_layout_parsing.py  data_generation_franka_pnp_type_aug_with_pose_aug.py  data_generation_grasp_aug_pose.py  data_generation_grasp_aug_pose_eval.py  data_generation_grasp_aug_pose_v1.py  data_generation_grasp_aug_pose_v1_parallel.py  data_generation_grasp_aug_pose_v2_eval.py  data_generation_grasp_aug_pose_v2_eval_aug_type.py  data_generation_grasp_aug_pose_v2_on_aug_type_parallel.py  data_generation_grasp_aug_pose_v2_on_aug_type_parallel_vis.py  data_generation_grasp_aug_pose_v2_parallel.py  data_generation_grasp_aug_pose_v2_parallel_vis.py  data_generation_grasp_v0.py  data_generation_grasp_v1.py  data_generation_grasp_v2.py  data_generation_grasp_v2_eval.py  data_generation_grasp_v3.py  data_generation_grasp_v3_eval.py  data_generation_grasp_v4.py  data_generation_grasp_v5.py  data_generation_grasp_v6.py  data_generation_merge.py  data_generation_mobile_franka_mobile_manipulation_with_pose_aug.py  data_generation_mobile_manipulation_from_layout_parsing.py  data_generation_mobile_manipulation_from_layout_parsing_pose_aug.py  data_generation_mobile_manipulation_v0.py  data_generation_mobile_manipulation_v1_deprecated.py  data_generation_mobile_manipulation_v2.py  data_generation_mobile_manipulation_v3.py  data_generation_mobile_manipulation_v4.py  data_generation_mobile_manipulation_v4_eval.py  data_generation_mobile_manipulation_v4_eval_sample.py  data_generation_mobile_manipulation_v4_eval_sample_pose_aug.py  data_generation_mobile_manipulation_v4_eval_sample_pose_aug_from_parse.py  data_generation_mobile_manipulation_v5.py  data_generation_mobile_manipulation_v5_eval.py  data_generation_mobile_manipulation_v5_pose_aug.py  data_generation_mobile_manipulation_v6.py  data_generation_mobile_manipulation_v6_eval.py  (+22 more)
server/isaaclab/curobo_tools/: curobo_ik_planner.py  curobo_planner.py
server/isaaclab/curobo_tools_mobile_grasp/: curobo_ik_planner.py  curobo_planner.py
server/isaacsim/: README.md
server/m2t2_utils/: data.py  infer.py
server/objects/: get_objects.py  objaverse_retrieval.py  object_addition_planner.py  object_attribute_inference.py  object_augmentation.py  object_generation.py  object_mobile_manipulation_utils.py  object_movement_planner.py  object_on_top_placement.py  object_placement_planner.py  object_placement_planner_direct_location_est.py  object_selection_planner.py
server/objects/_optimize/: README.md  constraints.py  example_usage.py  primitives.py  pytorch_optimization_example.py  test_differentiability.py
server/partnet/: clip.py  clip_vis.py  qwen.py  retrieval.py  sbert.py  sbert_vis.py
server/physics/: phys_env.py  physics.py
(+98 files in other folders)
