[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "httpx",
    "mcp[cli]>=1.9.4",
    "matplotlib>=3.10.3",
    "numpy>=1.24.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.1.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "isaacsim==6.0.0.0",
    "isaacsim-extscache-physics==6.0.0.0",
    "isaacsim-extscache-kit==6.0.0.0",
    "isaacsim-extscache-kit-sdk==6.0.0.0",
    "compress-pickle",
    "compress-json",
    "trimesh",
    "open-clip-torch==2.32.0",
    "sentence-transformers==4.1.0",
    "open3d==0.19.0",
    "transformers",
    "rtree",
    "shapely",
    "editdistance",
    "plyfile",
    "pip",
    "pillow>=10.0.0",
    "manifold3d",
    "xatlas",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git",
    "ninja",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable",
    "imageio[ffmpeg]",
    "pygltflib",
    "embreex",
    "openai",
    "mujoco==3.3.4",
    "h5py",
    "hydra-core",
    "meshcat",
    "torchmetrics==0.6.0",
    "accelerate==0.23.0",
    "scikit-image",
    "robosuite",
    "gymnasium",
    "diffusers==0.35.1",
    "loguru",
    "sapien>=3.0.0b1",
    "umap-learn",
    "seaborn",
    "scikit-learn",
    "pointnet2_ops",
    "m2t2",
    "omni-isaac-lab",
    "omni-isaac-lab_assets",
    "omni-isaac-lab_tasks[sb3,skrl]",
    "nvidia-curobo",
    "s3fs",
]

[tool.pip]
extra-index-url = [
    "https://download.pytorch.org/whl/cu124",
    "https://pypi.nvidia.com"
]

[tool.uv]
no-build-isolation-package = [
    "pytorch3d",
    "pointnet2_ops",
    "m2t2",
    "nvidia-curobo",
    "nvdiffrast"
]

[tool.uv.extra-build-dependencies]
m2t2 = ["setuptools"]
pointnet2-ops = ["setuptools", "torch==2.5.1"]
nvidia-curobo = ["setuptools", "wheel", "ninja", "torch==2.5.1"]

# Make local Isaac Lab packages editable
[tool.uv.sources]
omni-isaac-lab = { path = "../IsaacLab/source/extensions/omni.isaac.lab", editable = true }
omni-isaac-lab_assets = { path = "../IsaacLab/source/extensions/omni.isaac.lab_assets", editable = true }
omni-isaac-lab_tasks = { path = "../IsaacLab/source/extensions/omni.isaac.lab_tasks", editable = true }
m2t2 = { path = "../M2T2", editable = true }
pointnet2_ops = { path = "../M2T2/pointnet2_ops", editable = true }
nvidia-curobo = { path = "../curobo", editable = true }
